fixed overflowing margin

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
 }
 
 body {
-  overflow: hidden;
+  margin: 0;
 }
 
 main {
-  position: relative;
+  /* position: relative; */
   height: 100vh;
   display: flex;
   justify-content: center;
